fixed issue with job list overflowing it's container
also removed console.log statements

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -317,6 +317,8 @@
   &__jobs
     @include bp('portrait')
       bottom: 0
+      display: flex
+      flex-direction: column
       left: 0
       position: absolute
       top: 20rem
@@ -324,7 +326,7 @@
 
   &__view-list-container
     @include bp('portrait')
-      position: relative
+      overflow-y: scroll
 
     @include bp('landscape')
 
